appId: app.orbis.social
---
- runScript:
    file: ../../setupServer.js
    env:
      SERVER_PATH: ?users&follows&posts&feeds
- runFlow:
    file: ../../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

- tapOn:
    id: "postDropdownBtn"
    index: 0
- tapOn:
    id: "postDropdownReportBtn"
- tapOn:
    id: "report:category:Misleading"
- tapOn:
    id: "report:option:Other misleading content"
- assertVisible:
    text: Your report will be sent to Dev-env Moderation.*
# reason "other" defaults with details open
- assertVisible:
    id: "report:details"
- tapOn:
    id: "report:clearReportOption"
- assertNotVisible:
    id: "report:details"
- tapOn:
    id: "report:clearCategory"
- assertNotVisible:
    id: "report:option:Other misleading content"
- tapOn:
    id: "report:category:Misleading"
- tapOn:
    id: "report:option:Spam"
- assertVisible:
    text: Your report will be sent to Dev-env Moderation.*
- tapOn:
    id: "report:submit"
- extendedWaitUntil:
    notVisible:
      id: "report:dialog"
    timeout: 20000
