appId: app.orbis.social
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: "?users"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eOpenLoggedOutView"
- tapOn: "Sign in"
- tapOn:
    id: "selectServiceButton"
- tapOn:
    id: "manualSelectBtn"
- tapOn:
    id: "customServerTextInput"
- inputText: "http://localhost:3000"
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- tapOn:
    id: "doneBtn"
- tapOn:
    id: "loginUsernameInput"
- inputText: "Alice"
- tapOn:
    id: "loginPasswordInput"
- inputText: "hunter2"
- pressKey: Enter
- tapOn:
    text: "Not Now"
    optional: true
- assertVisible: "Following"
